Fix: user image gmail fixed